<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.khambenh.RegisterFragment" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterName"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="@android:style/Widget.Holo.Light.EditText"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterAddress"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etRegisterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="@android:style/Widget.Holo.Light.EditText"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterPhone"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etRegisterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone|number"
        style="@android:style/Widget.Holo.Light.EditText"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterBirthDay"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/etRegisterBirthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="@android:style/Widget.Holo.Light.EditText"
        android:textSize="19sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterGender"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp" />

    <Spinner
        android:id="@+id/spRegisterGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:entries="@array/gender" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterEmail"
        style="@android:style/Widget.Holo.Light.TextView"
        android:textColor="#000"
        android:textSize="19sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:text="@string/btnRegister" />

</LinearLayout>