<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMajor" />

        <Spinner
            android:id="@+id/spMajor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDoctor" />

        <Spinner
            android:id="@+id/spDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal" >

        <com.example.khambenh.WeekView
            android:id="@+id/weekView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnGap="8dp"
            app:dayBackgroundColor="#05000000"
            app:eventTextColor="@android:color/white"
            app:headerColumnBackground="#ffffffff"
            app:headerColumnPadding="8dp"
            app:headerColumnTextColor="#8f000000"
            app:headerRowBackgroundColor="#ffefefef"
            app:headerRowPadding="12dp"
            app:hourHeight="60dp"
            app:noOfVisibleDays="3"
            app:textSize="12sp"
            app:todayBackgroundColor="#1848adff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSelectedTime" />

        <TextView
            android:id="@+id/tvSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSymptom" />

        <EditText
            android:id="@+id/etSymptom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="1"
            android:scrollbars="vertical"
            android:singleLine="false" />
    </LinearLayout>

    <Button
        android:id="@+id/btnContinute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnContinute" />

</LinearLayout>